--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -301,7 +301,7 @@ title: Math, Sonification, Plots
 				Note that the native browser on iPhone does not support volume control from the application.
 			</p></div>
 		</div>
-		<div class="button_ckdf">
+		<div class="btn-group">
 			<button type="button_ck" onclick="setBG_Black()">  COOK </button>
 			<button type="button_df" onclick="setBG_White()">DEFROST</button>			
 			<script>
