--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -36,7 +36,11 @@ title: Math, Sonification, Plots
         }
 		
 		.button_ckdf {
-				padding: 10px 24px; /* Some padding */
+				background-color: #4CAF50; /* Green background */
+                border: 1px solid green; /* Green border */
+                color: white; /* White text */
+                font-weight: bold;
+                padding: 10px 24px; /* Some padding */
                 cursor: pointer; /* Pointer/hand icon */
                 float: left; /* Float the buttons side by side */
         }
@@ -49,7 +53,7 @@ title: Math, Sonification, Plots
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
-                font-size: 38px;
+                font-size: 18px;
                 font-weight: bold;
                 margin: 4px 2px;
                 cursor: pointer;
@@ -311,8 +315,8 @@ title: Math, Sonification, Plots
 			</script>
 		</div>
 		<! -- br style="clear:both" / -- >
+		<br><br>
 	</div>
-	<br><br>
 
         <script>
             var playButton = document.getElementById("playButton")
