--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -11,7 +11,7 @@ title: Math, Sonification, Plots
 	<br><br>
 	
     <style>
-        .btn-group button {
+        .btn-group {
                 background-color: #4CAF50; /* Green background */
                 border: 1px solid green; /* Green border */
                 color: white; /* White text */
