--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -11,7 +11,7 @@ title: Math, Sonification, Plots
 	<br><br>
 	
     <style>
-        .btn-group {
+        .btn-group button {
                 background-color: #4CAF50; /* Green background */
                 border: 1px solid green; /* Green border */
                 color: white; /* White text */
@@ -35,10 +35,10 @@ title: Math, Sonification, Plots
                 cursor: pointer;
         }
 		
-		.button_ckdf {
-				background-color: #4CAF50; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
+		.btn-group button_ckdf {
+				background-color: red; /* Red background */
+                border: 1px solid black; /* Black border */
+                color: black; /* Black text */
                 font-weight: bold;
                 padding: 10px 24px; /* Some padding */
                 cursor: pointer; /* Pointer/hand icon */
@@ -305,7 +305,7 @@ title: Math, Sonification, Plots
 				Note that the native browser on iPhone does not support volume control from the application.
 			</p></div>
 		</div>
-		<div class="btn-group">
+		<div class="button_ckdf">
 			<button type="button_ck" onclick="setBG_Black()">  COOK </button>
 			<button type="button_df" onclick="setBG_White()">DEFROST</button>			
 			<script>
