--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -305,7 +305,7 @@ title: Math, Sonification, Plots
 				Note that the native browser on iPhone does not support volume control from the application.
 			</p></div>
 		</div>
-		<div class="button_ckdf">
+		<div class="btn-group">
 			<button type="button_ck" onclick="setBG_Black()">  COOK </button>
 			<button type="button_df" onclick="setBG_White()">DEFROST</button>			
 			<script>
@@ -313,9 +313,9 @@ title: Math, Sonification, Plots
 			<button class="volDec" onclick="vol_dec()">-</button>
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 			</script>
+			<br><br>
 		</div>
 		<! -- br style="clear:both" / -- >
-		<br><br>
 	</div>
 
         <script>
