--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -298,11 +298,12 @@ title: Math, Sonification, Plots
 		</div>
 		<div class="floatWarning">
 			<div><p>
-				!ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
-				information. It is advisable to adjust the volume on your device prior to 
-				playing the sonification for the plots. You can also adjust the volume
-				during play, either from your device, or the volume buttons for this application.
-				Note that the native browser on iPhone does not support volume control from the application.
+				This is a Proof of Concept (POC) design for a novel microwave interface.
+				The primary objective of this interface is to improve user interaction with
+				a microwave for the Visually Impaired (VI) community. This interface will
+				evolve as additional needfinding is integrated into an agile (iterative)
+				design process. The final product will be a much larger UI, better suited
+				for smartphone displays.
 			</p></div>
 		</div>
 		<div class="btn-group">
