--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -315,9 +315,9 @@ title: Math, Sonification, Plots
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 			</script>
 		</div>
-		<p><br>TESTING<br></p>
 		<! -- br style="clear:both" / -- >
 	</div>
+	<footer><p><br>TESTING<br></p></footer>
 
         <script>
             var playButton = document.getElementById("playButton")
