--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -286,8 +286,8 @@ title: Math, Sonification, Plots
 	<div class="myContainer">
 		<div class="floatItems">
 			<img id="myFunction"
-				style="width:500px;height:50%;
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
+				style="width:500px;height:50%;"
 				title="Click on Image for Description of Usage"
 				onclick = "change(); play(playButton);"/>
 			<script>
