--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -287,7 +287,7 @@ title: Math, Sonification, Plots
 		<div class="floatItems">
 			<img id="myFunction"
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
-				style="width:500px;height:50%;"
+				style="width:200%;height:auto;"
 				title="Click on Image for Description of Usage"
 				onclick = "change(); play(playButton);"/>
 			<script>
@@ -318,7 +318,6 @@ title: Math, Sonification, Plots
 		</div>
 		<! -- br style="clear:both" / -- >
 	</div>
-	<footer><p><br>TESTING<br></p></footer>
 
 	<script>
 		var playButton = document.getElementById("playButton")
@@ -415,4 +414,6 @@ title: Math, Sonification, Plots
 					}
 			}
 	</script>
+	<footer><p><br>TESTING<br></p></footer>
 </body>
+<footer><p><br>TESTING TESTING<br></p></footer>
