--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -181,9 +181,9 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-            width:40%;
+            width:30%;
             /* width: 500px; */
-            height: 200px;
+            height: 300px;
             display:inline-block;
 			width: 50%;
 			float: left;
@@ -287,7 +287,7 @@ title: Math, Sonification, Plots
 		<div class="floatItems">
 			<img id="myFunction"
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
-				style="width:200%;height:auto;"
+				style="width:150%;height:auto;"
 				title="Click on Image for Description of Usage"
 				onclick = "change(); play(playButton);"/>
 			<script>
@@ -414,6 +414,5 @@ title: Math, Sonification, Plots
 					}
 			}
 	</script>
-	<footer><p><br>TESTING<br></p></footer>
 </body>
-<footer><p><br>TESTING TESTING<br></p></footer>
+<!-- footer><p><br>TESTING TESTING<br></p></footer -->
