--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -181,9 +181,9 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-			height: 400px;
+			height: 420px;
             /* width: 500px; */
-			width: 10%;
+			width: 20%;
 			float: left;
             /* position:relative; */
             position:absolute;
@@ -291,7 +291,7 @@ title: Math, Sonification, Plots
 				onclick = "change(); play(playButton);"/>
 			<script>
 			<div id ="myAnimation"></div>
-			<img class="myAnimation" class="center fit myContainer">
+			<img class="myAnimation" class="center fit myContainer" style="white-space:pre">
 			<img id="myAnimation" class="center fit myContainer">
 			</script>
 			<img id="myAnimation"/>
