--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -291,7 +291,7 @@ title: Math, Sonification, Plots
 				onclick = "change(); play(playButton);"/>
 			<script>
 			<div id ="myAnimation"></div>
-			<img class="myAnimation" class="center fit myContainer" style="white-space:pre">
+			<img class="myAnimation" class="center fit myContainer" style="float:right;">
 			<img id="myAnimation" class="center fit myContainer">
 			</script>
 			<img id="myAnimation"/>
