--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -181,10 +181,10 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-			height: 420px;
+			height: 425px;
             /* width: 500px; */
-			width: 20%;
-			float: left;
+			width: 30%;
+			float: right;
             /* position:relative; */
             position:absolute;
             overflow-y: scroll;
@@ -291,7 +291,7 @@ title: Math, Sonification, Plots
 				onclick = "change(); play(playButton);"/>
 			<script>
 			<div id ="myAnimation"></div>
-			<img class="myAnimation" class="center fit myContainer" style="float:right;">
+			<img class="myAnimation" class="center fit myContainer">
 			<img id="myAnimation" class="center fit myContainer">
 			</script>
 			<img id="myAnimation"/>
