--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -184,12 +184,16 @@ title: Math, Sonification, Plots
 			height: 425px;
             /* width: 500px; */
 			width: 30%;
-			float: right;
+			float: left;
             /* position:relative; */
             position:absolute;
             overflow-y: scroll;
 			display:inline-block;
-            padding: 10px 10px 10px 10px;
+            /* padding: 10px 10px 10px 10px; */
+			padding-top: 30px;
+			padding-right: 10px;
+			padding-bottom: 10px;
+			padding-left: 750px;
             border: 3px solid #73AD21;
         }
 		
