--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -184,16 +184,12 @@ title: Math, Sonification, Plots
 			height: 425px;
             /* width: 500px; */
 			width: 30%;
-			float: left;
-            /* position:relative; */
-            position:absolute;
+			float: right;
+            position:relative;
+            /* position:absolute; */
             overflow-y: scroll;
 			display:inline-block;
-            /* padding: 10px 10px 10px 10px; */
-			padding-top: 30px;
-			padding-right: 10px;
-			padding-bottom: 10px;
-			padding-left: 750px;
+            padding: 10px 10px 10px 10px; */
             border: 3px solid #73AD21;
         }
 		
