--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -306,17 +306,20 @@ title: Math, Sonification, Plots
 				for smartphone displays.
 			</p></div>
 		</div>
-		<div class="btn-group">
-			<button type="button_ck" onclick="setBG_Black()">  COOK </button>
-			<button type="button_df" onclick="setBG_White()">DEFROST</button>			
-			<script>
-			<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
-			<button class="volDec" onclick="vol_dec()">-</button>
-			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
-			</script>
-		</div>
-		<! -- br style="clear:both" / -- >
 	</div>
+	<div class="btn-group btn-group-lg">
+		<button type="button" class="btn btn-primary">  COOK </button>
+		<button type="button" class="btn btn-primary">DEFROST</button>	
+		<script>
+		<button type="button_ck" onclick="setBG_Black()">  COOK </button>
+		<button type="button_df" onclick="setBG_White()">DEFROST</button>			
+		
+		<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
+		<button class="volDec" onclick="vol_dec()">-</button>
+		<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
+		</script>
+	</div>
+	<! -- br style="clear:both" / -- >
 
 	<script>
 		var playButton = document.getElementById("playButton")
