--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -310,7 +310,13 @@ title: Math, Sonification, Plots
 	<div class="btn-group btn-group-lg">
 		<button type="button" class="btn btn-primary">  COOK </button>
 		<button type="button" class="btn btn-primary">DEFROST</button>	
-		
+		<style>
+			<button type="button_ck" onclick="setBG_Black()">  COOK </button>
+			<button type="button_df" onclick="setBG_White()">DEFROST</button>			
+			<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
+			<button class="volDec" onclick="vol_dec()">-</button>
+			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
+		</style>
 	</div>
 	<! -- br style="clear:both" / -- >
 
