--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -237,9 +237,13 @@ title: Math, Sonification, Plots
 		
 		.btn_xl {
 				padding: 10px 20px;
-				font-size: 20px;
+				background-color: black; /* Black background */
+				color: orange; /* Orange text */
+				text-align: center;
+				font-size: 18px;
+				font-weight: bold;
 				border-radius: 10px;
-				width:50%;
+				width:30%;
 		}
     </style>
 </head>
@@ -315,8 +319,8 @@ title: Math, Sonification, Plots
 		</div>
 	</div>
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl"> COOOK      </button>
-		<button type="button" class="btn_xl">DEFROST</button>	
+		<button type="button" class="btn_xl"> COOK </button>
+		<button type="button" class="btn_xl"> DEFROST </button>	
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
