--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -237,8 +237,8 @@ title: Math, Sonification, Plots
 		
 		.btn_xl {
 				padding: 10px 20px;
-				background-color: black; /* Black background */
-				color: orange; /* Orange text */
+				background-color: #FFFFFF; /* Black background */
+				color: #FFFFFF; /* Orange text */
 				text-align: center;
 				font-size: 18px;
 				font-weight: bold;
