--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -240,7 +240,7 @@ title: Math, Sonification, Plots
 				background-color: #FFFFFF; /* Black background */
 				color: #FFFFFF; /* Orange text */
 				text-align: center;
-				font-size: 48px;
+				font-size: 18px;
 				font-weight: bold;
 				border-radius: 10px;
 				width:30%;
@@ -319,7 +319,7 @@ title: Math, Sonification, Plots
 		</div>
 	</div>
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl"> COOK </button>
+		<button type="button" class="btn_xl" style="background-color: #FFFFFF; color: #FFFFFF;"> COOK </button>
 		<button type="button" class="btn_xl"> DEFROST </button>	
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
