--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -320,7 +320,7 @@ title: Math, Sonification, Plots
 	</div>
 	<div class="btn-group btn-group-lg">
 		<button type="button" class="btn_xl" style="background-color: red; color: black;"> COOK </button>
-		<button type="button" class="btn_xl" style="background-color: blue; color: black;"> DEFROST </button>
+		<button type="button" class="btn_xl" style="background-color: #ADD8E6; color: black;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
