--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -319,8 +319,8 @@ title: Math, Sonification, Plots
 		</div>
 	</div>
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" style="background-color: red; color: black;"> COOK </button>
-		<button type="button" class="btn_xl" style="background-color: #ADD8E6; color: black;"> DEFROST </button>
+		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black;"> COOK </button>
+		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
