--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -367,10 +367,10 @@ title: Math, Sonification, Plots
 	</script>
 
 	<script>
-		var audio = $("#mySoundClip")[0];
+		var audio = $("#myTouchscreen")[0];
 		audio.play();
 		
-		var audio = $("#mySoundClip")[0];
+		var audio = $("#myTouchscreen")[0];
 		$("nav a").mouseenter(function() {
 		audio.play();
 		});
