--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -295,7 +295,8 @@ title: Math, Sonification, Plots
     
 	<div class="myContainer">
 		<div class="floatItems">
-			<img id="myTouchscreen"
+			<img id="myFunction"
+				<audio id="audio_touchscreen" src="sounds/INCREASE_TIME.mp4"></audio>
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				style="width:150%;height:auto;"
 				title="Click on Image for Description of Usage"
@@ -333,10 +334,11 @@ title: Math, Sonification, Plots
 	</div>
 	<! -- br style="clear:both" / -- >
 
-	<audio>
-		<source src="sounds/microwave_cook_sound.mp4"></source>
-		<source src="sounds/microwave_defrost_sound.mp4"></source>
-	</audio>
+	<script>
+		document.getElementById("myFunction").addEventListener("click", function(){
+		document.getElementById("audio_touchscreen").play();
+		});
+	</script>
 
 	<script>
 		var playButton = document.getElementById("playButton")
@@ -367,69 +369,42 @@ title: Math, Sonification, Plots
 	</script>
 
 	<script>
-		var audio = $("#myTouchscreen")[0];
-		audio.play();
-		
-		var audio = $("#myTouchscreen")[0];
-		$("nav a").mouseenter(function() {
-		audio.play();
-		});
+			var audio = document.getElementById("audio");
+			audio.volume = 0.4;
+			var isPlaying = false;
 
-		var audio = document.getElementById("audio");
-		audio.volume = 0.4;
-		var isPlaying = false;
+			function vol_inc() {
+					audio.volume += 0.1;
+			}
 
-		function vol_inc() {
-				audio.volume += 0.1;
-		}
+			function vol_dec() {
+					audio.volume -= 0.1;
+			}
 
-		function vol_dec() {
-				audio.volume -= 0.1;
-		}
+			function play(button) {
+					var elem = document.getElementById("myAnimation");
+					var newone = elem.cloneNode(true);
+					var audio = document.getElementById("audio");
+					// document.getElementById("myAnimation").style.animationDuration = audio.duration + "s";
+					elem.style.animationDuration = audio.duration + "s";
+					elem.style.oAnimationDuration = audio.duration + "s";
+					elem.style.mozAnimationDuration = audio.duration + "s";
+					elem.style.webkitAnimationDuration = audio.duration + "s";
 
-		function play(button) {
-				var elem = document.getElementById("myAnimation");
-				var newone = elem.cloneNode(true);
-				var audio = document.getElementById("audio");
-				// document.getElementById("myAnimation").style.animationDuration = audio.duration + "s";
-				elem.style.animationDuration = audio.duration + "s";
-				elem.style.oAnimationDuration = audio.duration + "s";
-				elem.style.mozAnimationDuration = audio.duration + "s";
-				elem.style.webkitAnimationDuration = audio.duration + "s";
-
-				audio.onended = function() {
-						elem.style.animationPlayState = 'paused';
-						elem.style.oAnimationPlayState = 'paused';
-						elem.style.mozAnimationPlayState = 'paused';
-						elem.style.webkitAnimationPlayState = 'paused';
-						elem.parentNode.replaceChild(newone, elem);
-
-						// button.innerHTML = "PLAY";
-						button.removeAttribute("class");
-						button.setAttribute("class", "button");
-						button.setAttribute("class", "play");
-						isPlaying = false
-				};
-				if (!isPlaying) {
-						audio.play();
-						elem.style.webkitAnimationPlayState = 'running';
-						// button.innerHTML = "PAUSE";
-						button.removeAttribute("class");
-						button.setAttribute("class", "button");
-						button.setAttribute("class", "pause");
-						isPlaying = true
-				}
-				else {
-						if (!audio.ended) {
-							audio.pause();
+					audio.onended = function() {
+							elem.style.animationPlayState = 'paused';
+							elem.style.oAnimationPlayState = 'paused';
+							elem.style.mozAnimationPlayState = 'paused';
 							elem.style.webkitAnimationPlayState = 'paused';
+							elem.parentNode.replaceChild(newone, elem);
+
 							// button.innerHTML = "PLAY";
 							button.removeAttribute("class");
 							button.setAttribute("class", "button");
 							button.setAttribute("class", "play");
 							isPlaying = false
-						}
-						else {
+					};
+					if (!isPlaying) {
 							audio.play();
 							elem.style.webkitAnimationPlayState = 'running';
 							// button.innerHTML = "PAUSE";
@@ -437,9 +412,28 @@ title: Math, Sonification, Plots
 							button.setAttribute("class", "button");
 							button.setAttribute("class", "pause");
 							isPlaying = true
-						}
-				}
-		}
+					}
+					else {
+							if (!audio.ended) {
+								audio.pause();
+								elem.style.webkitAnimationPlayState = 'paused';
+								// button.innerHTML = "PLAY";
+								button.removeAttribute("class");
+								button.setAttribute("class", "button");
+								button.setAttribute("class", "play");
+								isPlaying = false
+							}
+							else {
+								audio.play();
+								elem.style.webkitAnimationPlayState = 'running';
+								// button.innerHTML = "PAUSE";
+								button.removeAttribute("class");
+								button.setAttribute("class", "button");
+								button.setAttribute("class", "pause");
+								isPlaying = true
+							}
+					}
+			}
 	</script>
 </body>
 <!-- footer><p><br>TESTING TESTING<br></p></footer -->
