--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -295,7 +295,7 @@ title: Math, Sonification, Plots
     
 	<div class="myContainer">
 		<div class="floatItems">
-			<img id="myFunction"
+			<img id="audio_touchscreen"
 				<audio id="audio_touchscreen" src="sounds/INCREASE_TIME.mp4"></audio>
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				style="width:150%;height:auto;"
