--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -296,11 +296,10 @@ title: Math, Sonification, Plots
 	<div class="myContainer">
 		<div class="floatItems">
 			<img id="audio_touchscreen"
-				<audio id="audio_touchscreen" src="sounds/INCREASE_TIME.mp4"></audio>
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				style="width:150%;height:auto;"
 				title="Click on Image for Description of Usage"
-				onclick = "change(); play(playButton);"/>
+				onclick = "change(); play(audio_touchscreen);"/>
 			<script>
 			<div id ="myAnimation"></div>
 			<img class="myAnimation" class="center fit myContainer">
@@ -319,6 +318,8 @@ title: Math, Sonification, Plots
 			</p></div>
 		</div>
 	</div>
+	
+	<audio id="audio" src="sounds/INCREASE_TIME.mp4"></audio>
 	<div class="btn-group btn-group-lg">
 		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black;"> COOK </button>
 		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black;"> DEFROST </button>
@@ -335,13 +336,7 @@ title: Math, Sonification, Plots
 	<! -- br style="clear:both" / -- >
 
 	<script>
-		document.getElementById("myFunction").addEventListener("click", function(){
-		document.getElementById("audio_touchscreen").play();
-		});
-	</script>
-
-	<script>
-		var playButton = document.getElementById("playButton")
+		var audio_touchscreen = document.getElementById("audio_touchscreen")
 
 		function change() {
 			var img1 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png",
