--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -299,7 +299,7 @@ title: Math, Sonification, Plots
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				style="width:150%;height:auto;"
 				title="Click on Image for Description of Usage"
-				onclick = "change(); play(audio_touchscreen);"/>
+				onclick = "change();"/>
 			<script>
 			<div id ="myAnimation"></div>
 			<img class="myAnimation" class="center fit myContainer">
@@ -346,7 +346,6 @@ title: Math, Sonification, Plots
 		}
 
 		var gtech = document.getElementById("gtech");
-		var plot = document.getElementById("myFunction");
 		function setBG_Black() {
 			document.getElementById("myAnimation").style.backgroundColor = "yellow";
 			document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
