--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -299,6 +299,7 @@ title: Math, Sonification, Plots
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				style="width:150%;height:auto;"
 				title="Click on Image for Description of Usage"
+				<!-- onclick = "change(); play(audio_touchscreen);"/ -->
 				onclick = "change();"/>
 			<script>
 			<div id ="myAnimation"></div>
@@ -343,6 +344,7 @@ title: Math, Sonification, Plots
 				img2 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png";
 			var imgElement = document.getElementById('audio_touchscreen');
 			imgElement.src = (imgElement.src === img1)? img2 : img1;
+			imgElement.src = (imgElement.src === img2)? img1 : img2;
 		}
 
 		var gtech = document.getElementById("gtech");
