--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -299,7 +299,7 @@ title: Math, Sonification, Plots
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				style="width:150%;height:auto;"
 				title="Click on Image for Description of Usage"
-				onclick = "change();"
+				onclick = "onclick="play(this);"
 			<script>
 			<div id ="myAnimation"></div>
 			<img class="myAnimation" class="center fit myContainer">
