--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -295,11 +295,11 @@ title: Math, Sonification, Plots
     
 	<div class="myContainer">
 		<div class="floatItems">
-			<img id="audio_touchscreen"
+			<img id="myFunction"
 				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				style="width:150%;height:auto;"
 				title="Click on Image for Description of Usage"
-				onclick = "change(); play(audio_touchscreen);"/>
+				onclick = "change(); play(playButton);"/>
 			<script>
 			<div id ="myAnimation"></div>
 			<img class="myAnimation" class="center fit myContainer">
@@ -335,7 +335,7 @@ title: Math, Sonification, Plots
 	<! -- br style="clear:both" / -- >
 
 	<script>
-		var audio_touchscreen = document.getElementById("audio_touchscreen")
+		var playButton = document.getElementById("playButton")
 
 		function change() {
 			var img1 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png",
