--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -279,7 +279,7 @@ title: Math, Sonification, Plots
 
     <h1>About the Project</h1>
     <div><p>
-        This website is part of a human factors study to improve ergonomics for the visually impaired.
+        This website is part of a human factors study to improve ergonomics and interface design for the Visually Impaired (VI) population.
         The concept originates from a
         <a href="https://omscs.gatech.edu/cs-6750-human-computer-interaction"
         target="_blank">CS 6750: Human-Computer Interaction</a> research project.
@@ -309,11 +309,11 @@ title: Math, Sonification, Plots
 		</div>
 		<div class="floatWarning">
 			<div><p>
-				This is a Proof of Concept (POC) design for a novel microwave interface.
+				This <strong>Wireframe</strong> is a Proof of Concept (POC) design for a novel microwave interface.
 				The primary objective of this interface is to improve user interaction with
 				a microwave for the Visually Impaired (VI) community. This interface will
-				evolve as additional needfinding is integrated into an agile (iterative)
-				design process. The final product will be a much larger UI, better suited
+				evolve as additional <strong>Needfinding</strong> is integrated into an <i>agile (iterative)
+				design process</i>. The final product will be a much larger form-factor for the UI that's better suited
 				for smartphone displays.
 			</p></div>
 		</div>
