--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -331,8 +331,8 @@ title: Math, Sonification, Plots
 			<button class="volDec" onclick="vol_dec()">-</button>
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
-	<div><br>TEST</div>
 	</div>
+	<div><br>------------ TEST ---------------</div>
 
 	<script>
 		var playButton = document.getElementById("playButton")
