--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -236,13 +236,13 @@ title: Math, Sonification, Plots
 		}
 		
 		.btn_xl {
-				padding: 10px 20px;
+				padding: 20px 20px;
 				background-color: #FFFFFF; /* Black background */
 				color: #FFFFFF; /* Orange text */
 				text-align: center;
 				font-size: 18px;
 				font-weight: bold;
-				border-radius: 10px;
+				/* border-radius: 10px; */
 				width:33%;
 		}
     </style>
@@ -332,7 +332,7 @@ title: Math, Sonification, Plots
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
 	</div>
-	<div><br>------------ TEST ---------------</div>
+	<div><br><br></div>
 
 	<script>
 		var playButton = document.getElementById("playButton")
