--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -236,13 +236,13 @@ title: Math, Sonification, Plots
 		}
 		
 		.btn_xl {
-				padding: 20px 20px;
+				padding: 10px 20px;
 				background-color: #FFFFFF; /* Black background */
 				color: #FFFFFF; /* Orange text */
 				text-align: center;
 				font-size: 18px;
 				font-weight: bold;
-				/* border-radius: 10px; */
+				border-radius: 10px;
 				width:33%;
 		}
     </style>
@@ -317,7 +317,7 @@ title: Math, Sonification, Plots
 				for smartphone displays.
 			</p></div>
 		</div>
-	</div>
+	
 		
 	<div class="btn-group btn-group-lg">
 		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black;"> COOK </button>
@@ -332,7 +332,7 @@ title: Math, Sonification, Plots
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
 	</div>
-	<div><br><br></div>
+	</div>
 
 	<script>
 		var playButton = document.getElementById("playButton")
