--- a/cs6750/MICROWAVE_PROTOTYPE/index - Copy (4).html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index - Copy (4).html
@@ -317,11 +317,11 @@ title: Math, Sonification, Plots
 				for smartphone displays.
 			</p></div>
 		</div>
-	
+	</div>
 		
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black; float:left;"> COOK </button>
-		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black; float:right;"> DEFROST </button>
+		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black;"> COOK </button>
+		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
@@ -332,7 +332,7 @@ title: Math, Sonification, Plots
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
 	</div>
-	</div>
+	<! -- br style="clear:both" / -- >
 
 	<script>
 		var playButton = document.getElementById("playButton")
