--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -236,6 +236,7 @@ title: Math, Sonification, Plots
 		}
 		
 		.btn_xl {
+				position: absolute;
 				padding: 10px 20px;
 				background-color: #FFFFFF; /* Black background */
 				color: #FFFFFF; /* Orange text */
@@ -317,22 +318,22 @@ title: Math, Sonification, Plots
 				for smartphone displays.
 			</p></div>
 		</div>
-	
 		
-	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black; float:left;"> COOK </button>
-		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black; float:right;"> DEFROST </button>
-		<style>
-			<button type="button" class="btn btn-primary">  COOK </button>
-			<button type="button" class="btn btn-primary">DEFROST</button>	
-			<button type="button_ck" onclick="setBG_Black()">  COOK </button>
-			<button type="button_df" onclick="setBG_White()">DEFROST</button>			
-			<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
-			<button class="volDec" onclick="vol_dec()">-</button>
-			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
-		</style>
+		<div class="btn-group btn-group-lg">
+			<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black; float:left;"> COOK </button>
+			<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black; float:right;"> DEFROST </button>
+			<style>
+				<button type="button" class="btn btn-primary">  COOK </button>
+				<button type="button" class="btn btn-primary">DEFROST</button>	
+				<button type="button_ck" onclick="setBG_Black()">  COOK </button>
+				<button type="button_df" onclick="setBG_White()">DEFROST</button>			
+				<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
+				<button class="volDec" onclick="vol_dec()">-</button>
+				<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
+			</style>
+		</div>
 	</div>
-	</div>
+	<div><br>------------ TEST</div>
 
 	<script>
 		var playButton = document.getElementById("playButton")
