--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index - BACK.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index - BACK.html
@@ -332,7 +332,8 @@ title: Math, Sonification, Plots
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
 	</div>
-	<! -- br style="clear:both" / -- >
+	<footer><div><p><br></p></div></footer>
+
 
 	<script>
 		var playButton = document.getElementById("playButton")
