ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -325,7 +325,7 @@ title: Math, Sonification, Plots
 	
 	<div class="btn-group btn-group-lg">
 		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black; float:left;"> COOK </button>
-		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black; float:right;"> DEFROST </button>
+		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
@@ -335,6 +335,7 @@ title: Math, Sonification, Plots
 			<button class="volDec" onclick="vol_dec()">-</button>
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
+		<br><br>
 	</div>
 
 	<script>
