--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -222,8 +222,10 @@ title: Math, Sonification, Plots
 		}
 
         #myAnimation {
-                width: 71px;
-                height: 71px;
+                /* width: 71px; */
+                /* height: 71px; */
+				max-width: 100%;
+				height: auto;
                 position: relative;
 				/* position: absolute; */
 				/* position: sticky; */
