ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -222,10 +222,10 @@ title: Math, Sonification, Plots
 		}
 
         #myAnimation {
-                /* width: 71px; */
-                /* height: 71px; */
-				max-width: 100%;
-				height: auto;
+				width: 71px; 
+				height: 71px; 
+				/* max-width: 100%; */
+				/* height: auto; */
                 position: relative;
 				/* position: absolute; */
 				/* position: sticky; */
@@ -326,8 +326,8 @@ title: Math, Sonification, Plots
 	</div>
 	
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black()" style="position: absolute; background-color: red; color: black; float:left;"> COOK </button>
-		<button type="button" class="btn_xl" onclick="setBG_White()" style="position: absolute; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
+		<button type="button" class="btn_xl" onclick="setBG_Black()" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
+		<button type="button" class="btn_xl" onclick="setBG_White()" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
