ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -290,8 +290,8 @@ title: Math, Sonification, Plots
         The concept originates from a
         <a href="https://omscs.gatech.edu/cs-6750-human-computer-interaction"
         target="_blank">CS 6750: Human-Computer Interaction</a> research project.
-    </p></div>
-    <br>
+    </p></div><br>
+	
     <div><p>
         The results from this project will advance research for developing better interfaces that improve 
         accessibility and user experience for visually impaired audiences. This project will culminate with a 
@@ -337,6 +337,7 @@ title: Math, Sonification, Plots
 			<button class="volDec" onclick="vol_dec()">-</button>
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
+	<footer><p><br><br><br><br><br><br><br><br><br></p></footer>
 	</div>
 
 	<script>
