ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -15,6 +15,10 @@ title: Math, Sonification, Plots
 	<br><br>
 	
     <style>
+		body {
+			padding-bottom: 50px;
+		}
+
         .btn-group button {
                 background-color: #4CAF50; /* Green background */
                 border: 1px solid green; /* Green border */
@@ -337,7 +341,6 @@ title: Math, Sonification, Plots
 			<button class="volDec" onclick="vol_dec()">-</button>
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
-	<footer><p><br><br><br><br><br><br><br><br><br></p></footer>
 	</div>
 
 	<script>
@@ -435,6 +438,5 @@ title: Math, Sonification, Plots
 					}
 			}
 	</script>
-	<footer><p><br><br><br><br><br><br><br><br><br></p></footer>
 </body>
 <!-- footer><p><br>TESTING TESTING<br></p></footer -->
