ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -351,10 +351,10 @@ title: Math, Sonification, Plots
 				img2 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
 			var imgElement = document.getElementById('myFunction');
 			/* imgElement.src = (imgElement.src === img1)? img2 : img1; */
-			if (imgElement == img1) {
+			if (imgElement.src == img1) {
 				imgElement.src = img2
 			}
-			else if (imgElement == img2) {
+			else if (imgElement.src == img2) {
 				imgElement.src = img1
 			}
 		}
