ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -352,10 +352,10 @@ title: Math, Sonification, Plots
 			var imgElement = document.getElementById('myFunction');
 			/* imgElement.src = (imgElement.src === img1)? img2 : img1; */
 			if (imgElement.src == img1) {
-				imgElement.src = img2
+				imgElement.src = img2;
 			}
 			else if (imgElement.src == img2) {
-				imgElement.src = img1
+				imgElement.src = img1;
 			}
 		}
 
