ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -351,12 +351,13 @@ title: Math, Sonification, Plots
 				img2 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
 			var imgElement = document.getElementById('myFunction');
 			/* imgElement.src = (imgElement.src === img1)? img2 : img1; */
-			if (imgElement == img1) {
-				imgElement.src = img2;
-			}
-			else if (imgElement == img2) {
-				imgElement.src = img1;
-			}
+			var image = document.getElementById('myFunction');
+			if (imgElement.src === img1) {
+				image.src = img2;
+			 }
+			 else {
+				image.src = img2;
+			 }
 		}
 
 		var gtech = document.getElementById("gtech");
