ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -352,10 +352,10 @@ title: Math, Sonification, Plots
 			var image = document.getElementById('myFunction');
 			/* var imgElement = document.getElementById('myFunction');
 			   imgElement.src = (imgElement.src === img1)? img2 : img1; */
-			if (image.src === img1) {
+			if (image.src == img1) {
 				image.src = img2;
 			 }
-			 else if (image.src === img2) {
+			 else if (image.src == img2) {
 				image.src = img1;
 			 }
 		}
