ADD FILES SANDBOX

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -349,7 +349,7 @@ title: Math, Sonification, Plots
 		function change() {
 			var img1 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png",
 				img2 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
-			var image = document.getElementById('myFunction');
+			var image = document.getElementById('myFunction').src;
 			/* var imgElement = document.getElementById('myFunction');
 			   imgElement.src = (imgElement.src === img1)? img2 : img1; */
 			if (image == img1) {
