--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -307,10 +307,11 @@ title: Math, Sonification, Plots
 	<div class="myContainer">
 		<div class="floatItems">
 			<img id="myFunction"
-				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
-				style="width:150%;height:auto;"
-				title="Click on Image for Description of Usage"
-				onclick = "change(); play(playButton);"/>
+				 class="myContainer"
+				 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
+				 style="width:150%;height:auto;"
+				 title="Click on Image for Description of Usage"
+				 onclick = "change(); play(playButton);"/>
 			<script>
 			<div id ="myAnimation"></div>
 			<img id="myAnimation" class="center fit myContainer">
@@ -343,21 +344,15 @@ title: Math, Sonification, Plots
 		</style>
 	</div>
 
+	<audio id="audio" src="https://robert-bobkoskie.github.io/cs6460/sounds/circle.mp4"></audio>
 	<script>
 		var playButton = document.getElementById("playButton")
 
 		function change() {
 			var img1 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png",
 				img2 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
-			var image = document.getElementById('myFunction').src;
-			/* var imgElement = document.getElementById('myFunction');
-			   imgElement.src = (imgElement.src === img1)? img2 : img1; */
-			if (image == img1) {
-				image.src = img2;
-			 }
-			 else if (image == img2) {
-				image.src = img1;
-			 }
+			var imgElement = document.getElementById('myFunction');
+			imgElement.src = (imgElement.src === img1)? img2 : img1;
 		}
 
 		var gtech = document.getElementById("gtech");
