--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -349,8 +349,8 @@ title: Math, Sonification, Plots
 		var playButton = document.getElementById("playButton")
 
 		function change() {
-			var img1 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png",
-				img2 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
+			var img1 = "https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png",
+				img2 = "https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
 			var imgElement = document.getElementById('myFunction');
 			imgElement.src = (imgElement.src === img1)? img2 : img1;
 		}
